# audio-waveform-editor

./: App.tsx  README.md  app.json  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/domain/: __init__.py  models.py
backend/app/dsp/: __init__.py  chain.py  compressor.py  eq.py  reverb.py  waveform.py
backend/app/services/: __init__.py  audio_service.py
backend/app/storage/: __init__.py  session_store.py
backend/static/css/: app.css
backend/static/js/: editor.js
backend/templates/: base.html  editor.html  index.html
backend/templates/partials/: effects_panel.html  header_controls.html  timeline_panel.html
backend/tests/: conftest.py  test_api.py  test_dsp.py
src/: App.tsx  index.css  main.tsx
src/components/: AudioEditor.tsx  EffectToggle.tsx  EffectsPanel.tsx  EmptyState.tsx  Header.tsx  Knob.tsx  Sidebar.tsx  Timeline.tsx  VolumeSlider.tsx  ZoomSlider.tsx
src/contexts/: AudioContext.tsx
src/styles/: colors.ts
src/utils/: formatTime.ts
