[project]
name = "audio-waveform-editor-backend"
version = "0.1.0"
description = "FastAPI server-rendered audio waveform editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
